bk_ida/gccida/c1/alloc_aux_for_blocks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_aux_for_blocks/src/cfg.c:1089:6: error: use of undeclared identifier 'alloc_aux_for_blocks_initialized'
if ( alloc_aux_for_blocks_initialized ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_aux_for_blocks/src/cfg.c:1097:1: error: use of undeclared identifier 'alloc_aux_for_blocks_initialized'
alloc_aux_for_blocks_initialized = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alloc_aux_for_blocks/src/obj/cfg.o] Error 1
